# pytemplate

./: .gitignore  README.md  concat.py  concatenated.md  pyproject.toml
docs/: conf.py  index.rst
src/package/: __init__.py  __inti__.py  core.py
src/tools/: clone.py  concat.py
tests/: test_core.py
